--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,9 @@
     "variant": "cpp",
     "vector": "cpp",
     "algorithm": "cpp",
-    "memory": "cpp"
+    "memory": "cpp",
+    "charconv": "cpp",
+    "forward_list": "cpp",
+    "sstream": "cpp"
   }
 }
